k8s/GrafanaAgentConfig.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
